--- a/style.css
+++ b/style.css
@@ -39,19 +39,13 @@
 .menu-nav ul {
     display: flex;
     list-style: none;
-    gap: 10px;
+    gap: 25px;
 }
 
 .menu-nav ul li a {
     text-decoration: none;
     color: #585e65;
-    width: 80px;
-    height: 19px;
-    left: 295px;
-    top: 30px;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 19px;
+    
 }
 .menu-link-button {
     text-decoration: none;
@@ -62,7 +56,7 @@
     display: flex;
     align-items: center;
     border-radius: 4px;
-    text-align: center;
+ 
 }
 .logo{
    color:#000000;
@@ -90,8 +84,24 @@
     top: 114px;
     background-color: #FFFFFF;
     border-radius: 8px;
-    margin-top: 50px;
-    text-align: auto;
+    margin: 16px auto;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+}
+.button{
+    background-color: #4C6EF5;
+    border: 1.5px solid #4C6EF5;
+    color: #fff;
+    border-radius: 8px;
+    width: 100%;
+    height: 48px;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .center {
    display: block;
